--- a/app/templates/preview.html
+++ b/app/templates/preview.html
@@ -1,1 +1,4 @@
-<h1 class='label label-primary'>Hello from preview</h1>
+<h1>Preview</h1>
+<div class='container-fluid embed-responsive embed-responsive-4by3' id='preview'>
+    <iframe id='preview_iframe' class="embed-responsive-item" style="overflow:auto;width:100%;height:100%; resize: both;" width="100%"></iframe>
+</div>
