--- a/app/templates/preview.html
+++ b/app/templates/preview.html
@@ -1,4 +1,5 @@
 <h1>Preview</h1>
 <div class='container-fluid embed-responsive embed-responsive-4by3' id='preview'>
-    <iframe id='preview_iframe' class="embed-responsive-item" style="overflow:auto;width:100%;height:100%; resize: both;" width="100%"></iframe>
+    <iframe id='preview_iframe' class="embed-responsive-item" 
+    style="overflow:auto;width:100%;height:100%; resize: both;" width="100%"></iframe>
 </div>
