--- a/app/templates/editor.html
+++ b/app/templates/editor.html
@@ -1,8 +1,8 @@
 <h1>Template Manager</h1>
 <form id='editor_form'>
     <div class='form-group'>
-        {{form.filename.label}}
-        {{form.filename(class_="form-control")}}
+        {{form.company.label}}
+        {{form.company(class_="form-control")}}
     </div>
     <div class='form-group'>
         {% for field in form.template_type %}
